[package]
name = "validation"
version = "0.1.0"
edition = "2024"

[dependencies]
validation_derive = { path = "validation_derive", version = "0.1.0", optional = true }
email_address = { version = "0.2.9", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
regex = { version = "1.12.2", optional = true }
moka = { version = "0.12.12", features = ["sync"], optional = true }
heck = { version = "0.5.0", optional = true }

[features]
all = ["derive", "validation", "modification", "email", "pattern", "ip"]
default = ["derive", "validation", "modification"]
derive = ["dep:validation_derive"]
validation = []
modification = ["deb:heck"]
email = ["validation", "dep:email_address"]
pattern = ["validation", "dep:moka", "dep:regex"]
ip = ["validation"]
